; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/arc/gnu/extr_arc-opc.c_ARC700_register_simd_operand.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/arc/gnu/extr_arc-opc.c_ARC700_register_simd_operand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ARC700_register_simd_operand(i8 signext %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = sext i8 %4 to i32
  switch i32 %5, label %10 [
    i32 42, label %6
    i32 40, label %6
    i32 41, label %6
    i32 60, label %7
    i32 62, label %7
    i32 11, label %8
    i32 123, label %8
    i32 125, label %8
    i32 13, label %9
    i32 14, label %9
    i32 15, label %9
  ]

6:                                                ; preds = %1, %1, %1
  store i32 1, i32* %2, align 4
  br label %11

7:                                                ; preds = %1, %1
  store i32 2, i32* %2, align 4
  br label %11

8:                                                ; preds = %1, %1, %1
  store i32 3, i32* %2, align 4
  br label %11

9:                                                ; preds = %1, %1, %1
  store i32 4, i32* %2, align 4
  br label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %11

11:                                               ; preds = %10, %9, %8, %7, %6
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
